[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Textures/SimpleGradient.png" type="Texture" id=1]
[ext_resource path="res://Scripts/CustomTransparentButton.gd" type="Script" id=2]
[ext_resource path="res://Assets/Buttons/X_normal.png" type="Texture" id=3]
[ext_resource path="res://Assets/Themes/Roboto12Clean.tres" type="Theme" id=4]
[ext_resource path="res://Assets/Fonts/Roboto40.tres" type="DynamicFont" id=5]
[ext_resource path="res://Scripts/Views/TimeTracking.gd" type="Script" id=11]
[ext_resource path="res://Scripts/Views/TimeTracking/TrackedItem.gd" type="Script" id=12]
[ext_resource path="res://Assets/Buttons/TimeTrackBtnWhite.png" type="Texture" id=16]
[ext_resource path="res://Assets/Audio/notification.wav" type="AudioStream" id=18]

[node name="TimeTracking" type="Control"]
margin_right = 990.0
margin_bottom = 571.0
rect_clip_content = true
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoDataText" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -485.5
margin_top = -70.5
margin_right = 485.5
margin_bottom = 70.5
custom_colors/font_color = Color( 0.854902, 0.423529, 0.384314, 1 )
custom_fonts/font = ExtResource( 5 )
text = "NO DATA, YET!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LinearTimeTrackingContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -19.0
margin_bottom = -15.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="LinearTimeTrackingContainer"]
margin_right = 971.0
margin_bottom = 11.073
rect_min_size = Vector2( 0, 11.073 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="LinearTimeTrackingContainer"]
margin_top = 11.0
margin_right = 971.0
margin_bottom = 556.0
size_flags_vertical = 3
theme = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="LinearTimeTrackingContainer/ScrollContainer"]
margin_right = 961.0
margin_bottom = 545.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TrackedItem" type="ColorRect" parent="LinearTimeTrackingContainer/ScrollContainer/VBoxContainer"]
margin_right = 961.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
color = Color( 0.133333, 0.133333, 0.133333, 1 )
script = ExtResource( 12 )

[node name="H" type="HBoxContainer" parent="LinearTimeTrackingContainer/ScrollContainer/VBoxContainer/TrackedItem"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 21.0
margin_right = -16.0
rect_min_size = Vector2( 0, 25 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TrackedTime" type="Label" parent="LinearTimeTrackingContainer/ScrollContainer/VBoxContainer/TrackedItem/H"]
margin_top = 6.0
margin_right = 100.0
margin_bottom = 25.0
rect_min_size = Vector2( 100, 0 )
custom_colors/font_color = Color( 0.854902, 0.854902, 0.854902, 1 )
text = "00:03:68"

[node name="ProjectName" type="LineEdit" parent="LinearTimeTrackingContainer/ScrollContainer/VBoxContainer/TrackedItem/H"]
margin_left = 104.0
margin_right = 354.0
margin_bottom = 32.0
rect_min_size = Vector2( 250, 0 )
mouse_filter = 1
text = "Project name"
expand_to_text_length = true

[node name="Date" type="Label" parent="LinearTimeTrackingContainer/ScrollContainer/VBoxContainer/TrackedItem/H"]
margin_left = 358.0
margin_top = 6.0
margin_right = 873.0
margin_bottom = 25.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.631373, 0.631373, 0.631373, 1 )
text = "21/04/2021"
align = 2

[node name="TimeTrack" type="TextureButton" parent="LinearTimeTrackingContainer/ScrollContainer/VBoxContainer/TrackedItem/H"]
margin_left = 877.0
margin_right = 896.0
margin_bottom = 32.0
rect_min_size = Vector2( 19, 0 )
rect_pivot_offset = Vector2( 9.5, 9.5 )
mouse_filter = 1
size_flags_horizontal = 9
texture_normal = ExtResource( 16 )
expand = true
stretch_mode = 5
script = ExtResource( 2 )

[node name="Delete" type="TextureButton" parent="LinearTimeTrackingContainer/ScrollContainer/VBoxContainer/TrackedItem/H"]
margin_left = 900.0
margin_right = 919.0
margin_bottom = 32.0
rect_min_size = Vector2( 19, 0 )
rect_pivot_offset = Vector2( 9.5, 9.5 )
mouse_filter = 1
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="LinearTimeTrackingContainer/ScrollContainer/VBoxContainer/TrackedItem/H"]
margin_left = 923.0
margin_right = 924.666
margin_bottom = 32.0
rect_min_size = Vector2( 1.666, 0 )

[node name="Tween" type="Tween" parent="LinearTimeTrackingContainer/ScrollContainer/VBoxContainer/TrackedItem"]

[node name="SecondsTimer" type="Timer" parent="."]

[node name="RestTimer" type="Timer" parent="."]

[node name="Tween" type="Tween" parent="."]

[node name="AudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )

[node name="Gradient" type="TextureRect" parent="."]
modulate = Color( 0.156863, 0.156863, 0.156863, 1 )
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -81.0
margin_top = -158.0
margin_right = 77.0
mouse_filter = 2
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="LinearTimeTrackingContainer/ScrollContainer/VBoxContainer/TrackedItem" to="LinearTimeTrackingContainer/ScrollContainer/VBoxContainer/TrackedItem" method="_on_TrackedItem_mouse_entered"]
[connection signal="mouse_exited" from="LinearTimeTrackingContainer/ScrollContainer/VBoxContainer/TrackedItem" to="LinearTimeTrackingContainer/ScrollContainer/VBoxContainer/TrackedItem" method="_on_TrackedItem_mouse_exited"]
[connection signal="text_changed" from="LinearTimeTrackingContainer/ScrollContainer/VBoxContainer/TrackedItem/H/ProjectName" to="LinearTimeTrackingContainer/ScrollContainer/VBoxContainer/TrackedItem" method="_on_ProjectName_text_changed"]
[connection signal="button_up" from="LinearTimeTrackingContainer/ScrollContainer/VBoxContainer/TrackedItem/H/TimeTrack" to="LinearTimeTrackingContainer/ScrollContainer/VBoxContainer/TrackedItem" method="_on_TimeTrack_button_up"]
[connection signal="button_up" from="LinearTimeTrackingContainer/ScrollContainer/VBoxContainer/TrackedItem/H/Delete" to="LinearTimeTrackingContainer/ScrollContainer/VBoxContainer/TrackedItem" method="_on_Delete_button_up"]
[connection signal="timeout" from="SecondsTimer" to="." method="_on_SecondsTimer_timeout"]
[connection signal="timeout" from="RestTimer" to="." method="_on_RestTimer_timeout"]
